# flexclaw

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Roadmap.md  docker-compose.yml  main.py  pyproject.toml  run_telegram.py  test_ssl_fix.py
.github/instructions/: agno-docs.instructions.md
config/: agents.config.yaml  main.config.yaml  plugin.config.yaml
core/: agent_api.py  agent_builder.py  agent_os.py  audit.py  event_stream.py  loader.py  logging_config.py  notification_registry.py  session.py
docs/: creare-un-channel-plugin.md  creare-un-tool-plugin.md  primo-avvio.md  providers.md
plugin/channel/discord_bot/: README.md  __init__.py  bot.py  config.example.yaml  config.py  handlers.py  requirements.txt
plugin/channel/telegram_bot/: README.md  __init__.py  bot.py  config.example.yaml  config.py  handlers.py  requirements.txt
plugin/tool/knowledge_tool/: README.md  __init__.py  config.example.yaml  requirements.txt
plugin/tool/pdf_tool/: README.md  __init__.py  config.example.yaml  requirements.txt  tool.py
plugin/tool/pdf_tool/templates/: dark.html  editorial.html  minimal.html  modern.html  themes.yaml
plugin/tool/scheduler_tool/: __init__.py  config.example.yaml  engine.py  requirements.txt  storage.py  tool.py
plugin/tool/weather_tool/: README.md  __init__.py  config.example.yaml  requirements.txt  tool.py
